--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     border-radius: 20px; font-size: 12px; pointer-events: none;
     border: 1px solid #35af6d; display: none; line-height: 1.4;
   }
+
+  /* Home Button Styling */
+  .mapboxgl-ctrl-home {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z'%3E%3C/path%3E%3Cpolyline points='9 22 9 12 15 12 15 22'%3E%3C/polyline%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 </style>
 </head>
 <body>
@@ -91,11 +98,14 @@
   const mlyToken = 'MLY|25724468457195152|d9c0ac6f4fbcd6ede3a3ba4e8332729b';
   let pnmViewer = null, currentImageKey = null, currentDroneUrl = null, selectedPointId = null;
 
+  // Initial nudged center and zoom level
+  const homePosition = { center: [-90.20, 32.70], zoom: 6.8 };
+
   const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/light-v11',
-    zoom: 6,
-    center: [-89.8, 32.7],
+    center: homePosition.center,
+    zoom: homePosition.zoom,
     maxZoom: 22
   });
 
@@ -106,6 +116,29 @@
       zoom: 16
   });
   map.addControl(geocoder, 'top-left');
+
+  // Custom Home Button Control
+  class HomeControl {
+    onAdd(map) {
+      this._map = map;
+      this._container = document.createElement('div');
+      this._container.className = 'mapboxgl-ctrl mapboxgl-ctrl-group';
+      this._button = document.createElement('button');
+      this._button.className = 'mapboxgl-ctrl-home';
+      this._button.type = 'button';
+      this._button.title = 'Reset Map View';
+      this._button.onclick = () => {
+        map.flyTo({ center: homePosition.center, zoom: homePosition.zoom, essential: true });
+      };
+      this._container.appendChild(this._button);
+      return this._container;
+    }
+    onRemove() {
+      this._container.parentNode.removeChild(this._container);
+      this._map = undefined;
+    }
+  }
+  map.addControl(new HomeControl(), 'bottom-right');
 
   const stringToColour = (str) => {
     let hash = 0;
@@ -143,14 +176,6 @@
         data.features.forEach(f => f.properties.dynamicColor = stringToColour(f.properties.Name || "default"));
         map.addSource('counties', { type: 'geojson', data: data });
         map.addLayer({ id: 'county-fills', type: 'fill', source: 'counties', paint: { 'fill-color': ['get', 'dynamicColor'], 'fill-opacity': 0.15, 'fill-outline-color': '#000' } }, 'mapillary-lines');
-        const bounds = new mapboxgl.LngLatBounds();
-        data.features.forEach(f => {
-          if (f.geometry && f.geometry.coordinates) {
-            const coords = f.geometry.type === 'Polygon' ? f.geometry.coordinates[0] : f.geometry.coordinates;
-            coords.forEach(c => bounds.extend(Array.isArray(c[0]) ? c[0] : c));
-          }
-        });
-        map.fitBounds(bounds, { padding: 40 });
     });
 
     // 3. Debris Points
@@ -167,31 +192,23 @@
     applyDateFilter();
   });
 
-  // GPS Format Function
   function updateHUD(mainText, lat, lng) {
     const indicator = document.getElementById('view-indicator');
     indicator.style.display = 'block';
     indicator.innerHTML = `${mainText}<br><span style="color:#00ffff; font-family:monospace;">GPS: ${lat.toFixed(6)}, ${lng.toFixed(6)}</span>`;
   }
 
-  // Click on Map Background for Lat/Long
   map.on('click', (e) => {
-    // If we clicked a feature, the feature listener will handle it. 
-    // Otherwise, we just show the coordinates of the click.
     const features = map.queryRenderedFeatures(e.point, { layers: ['mapillary-points', 'drone-layer', 'debris-layer'] });
-    if (!features.length) {
-      updateHUD('Map Location Selected', e.lngLat.lat, e.lngLat.lng);
-    }
+    if (!features.length) { updateHUD('Map Location Selected', e.lngLat.lat, e.lngLat.lng); }
   });
 
   map.on('click', 'mapillary-points', (e) => {
     if (selectedPointId !== null) { map.setFeatureState({ source: 'mapillary', sourceLayer: 'image', id: selectedPointId }, { selected: false }); }
     selectedPointId = e.features[0].id;
     map.setFeatureState({ source: 'mapillary', sourceLayer: 'image', id: selectedPointId }, { selected: true });
-
     currentImageKey = e.features[0].properties.id; currentDroneUrl = null;
     document.getElementById('mly-frame').style.display = 'block'; document.getElementById('panorama').style.display = 'none';
-    
     updateHUD('Current View: Street Imagery', e.lngLat.lat, e.lngLat.lng);
     document.getElementById('mly-frame').src = `https://www.mapillary.com/embed?image_key=${currentImageKey}&style=photo&menu=false`;
   });
@@ -200,16 +217,12 @@
     const props = e.features[0].properties;
     currentDroneUrl = props.Viewer_Link; currentImageKey = null;
     document.getElementById('mly-frame').style.display = 'none'; document.getElementById('panorama').style.display = 'block';
-    
     updateHUD(`Current View: Drone 360 | ${props.DateTime || 'N/A'}`, e.lngLat.lat, e.lngLat.lng);
-
     if (pnmViewer) pnmViewer.destroy();
     pnmViewer = pannellum.viewer('panorama', { "type": "equirectangular", "panorama": "https://360-proxy.jmvetters.workers.dev/?url=" + encodeURIComponent(currentDroneUrl), "autoLoad": true, "mouseZoom": true, "draggable": true });
   });
 
-  map.on('click', 'debris-layer', (e) => {
-    updateHUD(`Debris Selected: ${e.features[0].properties['Debris Type']}`, e.lngLat.lat, e.lngLat.lng);
-  });
+  map.on('click', 'debris-layer', (e) => { updateHUD(`Debris Selected: ${e.features[0].properties['Debris Type']}`, e.lngLat.lat, e.lngLat.lng); });
 
   function applyDateFilter() {
     const fromTs = document.getElementById('date-from').value ? new Date(document.getElementById('date-from').value).getTime() : 0;
